Fixed Modal Sizes on Mobile

--- a/AminWeb/Areas/Admin/Content/Styles/style.css
+++ b/AminWeb/Areas/Admin/Content/Styles/style.css
@@ -1670,7 +1670,7 @@ ul {
 
 .modal {
     z-index: 11000 !important;
-    width: 2000px !important;
+    width: 100vw !important;
 }
 
 .modal-backdrop {
